--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,12 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 		</dependency>
+		
+		<dependency>
+		  <groupId>org.mockito</groupId>
+		  <artifactId>mockito-scala-scalatest_2.13</artifactId>
+		  <version>1.16.42</version>
+		</dependency>
 	</dependencies>
 
 	<build>
